<resources>
    <string name="app_name">Tourio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_tour">DetailTourActivity</string>


    <string name="title_of_tour">San Francisco Basics</string>
    <string name="duration_of_tour">Approx: 3 Hours</string>
    <string name="guided_by">Tour Guided By:</string>
    <string name="created_by_name">June\'s</string>

    <string name="stops">Stops</string>
    <string name="comments">Comments</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="menu">Menu</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_create_tour">CreateTourActivity</string>
    <string name="title_activity_cashout">CashoutActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <string-array name="cities_list">
        <item>Berkeley</item>
        <item>Palo Alto</item>
        <item>San Francisco</item>
        <item>New York City</item>
        <item>Chicago</item>
        <item>Los Angeles</item>
    </string-array>
</resources>
